Bug 352477 - Icons from same application not grouped.
Summary: Icons from same application not grouped.
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Icons-only Task Manager (show other bugs)
Version: 5.4.0
Platform: openSUSE Linux
: NOR normal
Target Milestone: 1.0
Assignee: Eike Hein
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-09-09 11:51 UTC by Paul
Modified: 2015-10-01 11:32 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed In:


Attachments
gimp-grouped-icons (98.83 KB, image/png)
2015-09-09 11:52 UTC, Paul
Details
gimp-individual-icons (19.99 KB, image/png)
2015-09-09 11:52 UTC, Paul
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Paul 2015-09-09 11:51:01 UTC
Apologies in advance if this is by design.

Prior to Plasma5 the Icon Only Task Manager would group icons belonging to the same application together. This is not the case with the Plasma5 version, which shows individual icons.

See attached screen-shots, using the Gimp as an example.


Reproducible: Always
Comment 1 Paul 2015-09-09 11:52:08 UTC
Created attachment 94488 [details]
gimp-grouped-icons

Grouped Icons - GIMP 2.8.14 / KDE Platform Version 4.14.7
Comment 2 Paul 2015-09-09 11:52:46 UTC
Created attachment 94489 [details]
gimp-individual-icons

Individual Icons - GIMP 2.8.14 / Plasma 5
Comment 3 Paul 2015-09-09 15:39:12 UTC
Updated information relating to this following discussion on the openSUSE forum ( https://forums.opensuse.org/showthread.php/509590-updated-to-openSUSE-20150903-%28Tumbleweed%29?p=2727492#post2727492 )

This appears to only happen with GIMP. Trying Thunderbird and Libreoffice (as non native KDE applications) group correctly.

There is also rather strange behaviour whereby upon opening a second image window in GIMP all of the (until then separate) icons group together.
Comment 4 Eike Hein 2015-09-30 20:25:05 UTC
The reason e.g. the Toolbox isn't getting grouped is because the Task Manager normally doesn't create buttons for utility windows, unless they are in "demanding attention" (taskbar notification) state. In "demanding attention" state windows also aren't grouped. This is in some sense a Gimp bug because it shouldn't be setting that state on the toolbox in the first place, however the Task Manager should probably be regrouping after the window is raised and the attention request dismissed. It's probably not doing this because it it decides to ignore the utility window at that point.

There's two solutions:
- Ignore utility windows even if they demand attention
- Fix the regrouping not occuring

#2 is probably better
Comment 5 Eike Hein 2015-09-30 23:03:24 UTC
Git commit c34550cf4a7e93a5e14e882b01f7ab0cb24936ec by Eike Hein.
Committed on 30/09/2015 at 23:03.
Pushed by hein into branch 'master'.

Fix utility windows not being removed from task tree after demands-attention state is cleared.

Utilility windows are typically omitted from the task tree, unless they
are in demands-attention state. SVN r901886 (cf. bug 178509 from 2008)
introduced a bug by preventing tasks included in this fashion from
reaching active state, causing the demands-attention state not to ever
be cleared. Additionally, a separate bug prevented utility windows
losing demands-attention state from being removed from the task tree
thereafter. This patch fixes both.

This cropped up with recent versions of The Gimp, which curiously
sets its utility windows to demand attention when opened from within
the app. Since windows demanding attention are also implicitly exemped
from grouping, this appeared to users as a failure of the grouping
logic.
Related: bug 178509

M  +6    -4    libtaskmanager/groupmanager.cpp
M  +1    -1    libtaskmanager/taskmanager.cpp

http://commits.kde.org/plasma-workspace/c34550cf4a7e93a5e14e882b01f7ab0cb24936ec
Comment 6 Paul 2015-10-01 11:32:25 UTC
Eike,
Thanks - appreciate your work on this :)